--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ ul {
     margin: 0;
 }
 
-p { font-size: 1em; }
+p { font-size: 1.2em; }
 
 img { border-style: none; }
 
@@ -68,12 +68,33 @@ img { border-style: none; }
     color: black;
 }
 
+#coffeehouse {
+    background-image: url("https://otherfiles-cbm.s3-us-west-2.amazonaws.com/CoffeeShopImage.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 250px;
+    animation-name: background-pan;
+    animation-duration: 10s ;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    }
+    @keyframes background-pan {
+    from { background-position: left; }
+    to { background-position: right; }
+}
+
 /* End General Settings */
 
 /* Header */
 
-header { 
+/*header { 
     background: Sienna; 
+    padding: 10px;
+}*/
+
+header {
+    background-image: linear-gradient(sienna, chocolate);
     padding: 10px;
 }
 
@@ -140,3 +161,125 @@ footer a { color: cornsilk; }
 }
 
 /* End Page Content */
+
+/* Media Queries */
+@media only screen
+and (min-device-width: 375px)
+and (max-device-width: 750px) {
+    /* Reduce padding in main element */
+    main { padding: 5px; }
+    /* Fix nav bar */
+    nav { height: 35px; }
+    nav ul { padding-top: 7px; }
+    nav li { display: inline; }
+    nav li a { color: white; }
+    /* Add extra spacing between menu items */
+    .menu-item {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    }
+    .title-item h2 { font-size: 1em; }
+    /* Fix add on item */
+    .menu-item.additional-items h2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    float: none;
+    }
+    /* Reduce footer header size and add some padding */
+    footer h2 {
+    font-size: 1.4em;
+    padding-top: 3px;
+    padding-bottom: 3px ;
+    }
+    /* Reduce size of footer text to avoid awkward wrapping */
+    footer li { font-size: 0.85em; }
+    /* Add padding to bottom of footer */
+    footer { padding-bottom: 5px; }
+}
+
+
+/* Sprites 
+<span class="sprite-palette"></span>
+<span class="sprite-guitar"></span>
+<span class="sprite-mask"></span>
+<span class="sprite-controller"></span>
+<span class="sprite-mic"></span>
+<span class="sprite-quill"></span>
+<span class="sprite-cup"></span>
+<span class="sprite-utensils"></span>
+<span class="sprite-milk"></span>
+<span class="sprite-clydebank"></span>
+<span class="sprite-bigcup"></span>
+*/
+.sprite-palette {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') 0 0;
+}
+.sprite-guitar {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -40px 0 ;
+}
+.sprite-mask {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -80px 0;
+}
+.sprite-controller {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -120px 0;
+}
+.sprite-mic {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -160px 0;
+}
+.sprite-quill {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none ;
+background: url('../images/sprite.png') -200px 0;
+}
+.sprite-cup {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -240px 0;
+}
+.sprite-utensils {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -280px 0;
+}
+.sprite-milk {
+display: block;
+width: 40px;
+height: 40px;
+padding: 0;
+border: none;
+background: url('../images/sprite.png') -320px 0;
